--- a/modules.less
+++ b/modules.less
@@ -1,4 +1,4 @@
-/** 
+/**
  * Base theme including all modules needed.
  *
  * Each module is within its own
@@ -7,4 +7,14 @@
  * be override modules/some-module.less. This is useful when several themes
  * the same modules.
  */
-//@import url(some-module.less);
+//Normalize view
+@import url(normalize.less);
+
+// Regioner i theme
+@import url(regions.less);
+
+// Responsive menu
+@import url(responsive-menu.less);
+
+// Header menu
+@import url(header.less);
