--- a/modules/regions.less
+++ b/modules/regions.less
@@ -32,7 +32,7 @@
 
 .site-footer {
     text-align: center;
-    
+
     ul {
         margin: 0;
         padding: 0;
@@ -57,7 +57,7 @@
     .previous {
         width: 50%;
     }
-    
+
     .next {
         float: right;
         text-align: right;
@@ -72,7 +72,7 @@
         padding: 0;
         list-style-type: none;
     }
-    
+
     li {
         display: inline;
 
@@ -84,4 +84,7 @@
 
 .site-header {
     position: relative;
+}
+.navbar2 {
+    width: 60%;
 }
