--- a/style.less
+++ b/style.less
@@ -25,7 +25,9 @@ img {
 .inner-wrap-header {
     border-bottom: 3px solid #44567B;
 }
-
+.navbar2 {
+    width: 60%;
+}
 /** --------------------------------------------------------------
  *  Responsive behavior
  */
