--- a/modules/layout-typografi.less
+++ b/modules/layout-typografi.less
@@ -1,84 +1,5 @@
-/**
-* Grid based layout
-*/
-
-
-@import 'grid-float.less';
+// Typographic grid
 @import 'typography.less';
-
-
-//@import 'grid-flex.less';
-@gridImage : "../img/grid940x12x60x20-nomargin.png";
-//@gridImage : "../img/grid960x12x60x20.png";
-
-    //.showGrid(960px);
-html.vgrid .inner-wrap {
-    .showGrid(960px, @gridImage);
-    &.inner-wrap-header {
-    .showGrid(960px, @gridImage);
-    }
-}
-
-body.route-grid {
-        @gridWith : 950px;
-        .grid(@gridWith);
-        .showGrid(@gridWith, @gridImage );
-        //max-width: 960px;
-    .row {
-        .row();
-    }
-    .logo-1 {
-        position: absolute;
-        left: 100px;
-        top: 100px;
-    }
-    .site-logo-text {
-        .column(3);
-    }
-    .navbar2 {
-        .column(9);
-    }
-    .flash-wrap {
-        .column(@columns);
-    }
-    .breadcrumb-wrap {
-        .column(@columns);
-    }
-    .sidebar {
-        .column(@columns / 3);
-        background-color: green;
-        opacity: 0.2;
-    }
-    .main {
-        .column(@columns * 2 / 3);
-        background-color: blue;
-        opacity: 0.2;
-    }
-    .footer-column {
-        .column(@columns / 3);
-        background-color: yellow;
-        opacity: 0.2;
-    }
-    @media screen and (max-width: 680px) {
-        .footer-column, .main, .sidebar  {
-            .column(@columns);
-        }
-    }
-    .site-footer {
-        .column(@columns);
-        text-align: center;
-        background-color: lightgray;
-        opacity: 0.1;
-    }
-}
-
-
-
-html.hgrid body {
-    @gridImage : "../img/horisontal-grid-24.png";
-    background-image: url("@{gridImage}") ;
-    background-repeat: repeat;
-}
 
 body.route-typografi {
     //.wrap-all {
