--- a/layout.less
+++ b/layout.less
@@ -83,6 +83,7 @@ html.hgrid body {
 body.route-typografi {
     //.wrap-all {
         @gridImage : "../img/horisontal-grid-24.png";
+        background-color: transparent;
         background-image: url("@{gridImage}") ;
         background-repeat: repeat;
         //background: url("@{gridImage}") repeat-x fixed center center;
