--- a/layout.less
+++ b/layout.less
@@ -107,6 +107,9 @@ body.route-typografi {
         //.fontSize(0.75em);
         //height: (@magicNumber * 1);
     }
+    .wrap-all {
+        background-color: transparent;
+    }
 
     h1 {
         .fontSize(@fontSizeH1);
