--- a/style.less
+++ b/style.less
@@ -71,7 +71,7 @@ img {
     Base elements to style in the different themes
 */
 @body-background-color:   white;
-@wrapall-background-color:   white;
+@wrapall-background-color:   transparent;
 @wrapall-color:   black;
 @header-background-color:   white;
 @footer-background-color:   white;
